argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/docker-io-cronjob.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: docker-io-cronjob
  namespace: default
spec:
  schedule: 0 * * * *
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: Never
          containers:
          - name: job
            image: docker.io/traefik:v3.7.12
