argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/docker-io-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker-io-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: docker.io/library/nginx:latest
