argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/excluded-ns-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: excluded-ns-pod
  namespace: harbor
spec:
  containers:
  - name: nginx
    image: nginx:1.27.1
