argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/implicit-official-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: implicit-official-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:1.27.1
