argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/implicit-org-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: implicit-org-pod
  namespace: default
spec:
  containers:
  - name: graylog
    image: graylog/graylog:6.3.1
