argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/index-docker-io-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: index-docker-io-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: index.docker.io/library/nginx:latest
