argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/mixed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mixed-pod
  namespace: default
spec:
  initContainers:
  - name: init
    image: busybox:1.36
  containers:
  - name: app
    image: ghcr.io/stakater/reloader:v1.4.21
  - name: sidecar
    image: registry.k8s.io/prometheus-adapter/prometheus-adapter:v0.12.0
  - name: private
    image: private.example.com/team/app:1.0
  imagePullSecrets:
  - name: acr-pull
  - name: harbor-proxy-cache
